# SGRPO

./: .dockerignore  .gitignore  Dockerfile  README.md  SGRPO_Kaggle.ipynb  SGRPO_Kaggle_Benchmark.ipynb  config.py  launch_benchmark.sh  main.py  pyproject.toml  requirements.txt
Experiments/: ablation_study.py  contamination_probe.py  convergence_analysis.py  cosine-simiarity-experiments-for-different-rollout.ipynb  evaluate_checkpoint.py  future_kl_sensitivity.py  local_benchmark.py  math_derivations.md  run_benchmark.py  test_loss_functions.py
data/: __init__.py  base_dataset.py  gsm8k.py  math_dataset.py
losses/: __init__.py  bapo_loss.py  dapo_loss.py  grpo_loss.py  ppo_loss.py  sgrpo_loss.py
models/: load_model.py
rewards/: gsm8k_reward.py  math_reward.py
rollouts/: base_rollout.py  sgrpo_rollout.py
tracking/: wandb_logger.py
trainer/: base_trainer.py
