[project]
name = "sgrpo"
version = "0.1.0"
description = "SGRPO: State-Isolated Group Relative Policy Optimization. Fixes memory drift in Mamba (SSMs) by resetting hidden states across RL rollouts, unlocking advanced reasoning for edge and offline AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "bitsandbytes>=0.45.0",
    "causal-conv1d>=1.2.0 ; sys_platform == 'linux'",
    "datasets>=3.0.0",
    "einops>=0.8.0",
    "huggingface-hub>=0.25.0",
    "joblib>=1.4.0",
    "mamba-ssm>=1.2.0 ; sys_platform == 'linux'",
    "matplotlib>=3.11.0",
    "numpy>=2.0.0,<2.5.0",
    "nvidia-ml-py>=13.610.43",
    "omegaconf>=2.3.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "peft>=0.13.0",
    "plotly>=6.8.0",
    "protobuf>=5.0.0",
    "psutil>=6.0.0",
    "pynvml>=12.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "statsmodels>=0.14.0",
    "tokenizers>=0.20.0",
    "torch>=2.6.0",
    "torchvision",
    "tqdm>=4.66.0",
    "transformers>=4.45.0",
    "triton-windows>=3.7.1.post27 ; sys_platform == 'win32'",
    "triton; sys_platform != 'win32'",
    "trl>=0.12.0",
    "vllm>=0.6.0 ; sys_platform != 'win32'",
    "wandb>=0.28.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
